...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VgL-hy-if5">
                                <rect key="frame" x="157" y="371" width="100" height="100"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="100" id="95p-Gh-lny"/>
                                    <constraint firstAttribute="width" constant="100" id="b7O-M5-BLT"/>
                                </constraints>
                                <state key="normal" title="Refresh Style"/>
                                <connections>
                                    <action selector="btnRefresh:" destination="8eZ-3b-sXB" eventType="touchUpInside" id="7ph-1e-eoI"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fKL-pf-op5">
                                <rect key="frame" x="172" y="752" width="70" height="31"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="70" id="V6J-8z-3cM"/>
                                    <constraint firstAttribute="height" constant="31" id="uhB-yO-TeL"/>
                                </constraints>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Next"/>
                                <connections>
                                    <segue destination="BYZ-38-t0r" kind="show" id="cFu-4c-lA6"/>
                                </connections>
                            </button>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="bDA-CK-Bfa"/>
...
